tests/NormalTests/paczka1/small_fuzzy/21396823.err
Error in line 2: dMsAleF S36 10,7
Error in line 10: 42NFz S862 54,7
Error in line 15: imi2a S578 52,2
